# TEAMMINDCORE

./: .env.example  .gitignore  Dockerfile  README.md  TeamMindHub_Backend_PRD_v1-668ab7279f.2.md  desktop-pure-app.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: release-desktop.yml
.tmp/chrome-headless/: Local State
.tmp/desktop-build-cli-check/: index.html
.tmp/edge-headless/: Local State
.tmp/jsdom-runner/: package.json
.tmp/vector-store-039f98c3/: teammindhub.db
.tmp/vector-store-0ad2e1e0/: teammindhub.db
.tmp/vector-store-0b2cc6c3/: teammindhub.db
.tmp/vector-store-0bc119e5/: teammindhub.db
.tmp/vector-store-1272dd70/: teammindhub.db
.uvenv/: pyvenv.cfg
.uvenv/Scripts/: activate  jp.py  (+7 more)
app/: __init__.py  main.py  runtime.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
installer/: TeamMindHub.iss
scripts/: build_installer.ps1
teammindhub_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_analysis_service.py  test_app.py  test_config.py  test_desktop_assets.py  test_desktop_bridge.py  test_desktop_build.py  test_desktop_doctor.py  test_desktop_installer.py  test_desktop_main.py  test_document_flow.py  test_document_parser.py  test_ingestion.py  test_installer.py  test_mineru_parser.py  test_ollama_client.py  test_orchestrator.py  test_ragflow_parser.py  test_report_service.py  test_retrieval_service.py  test_task_planner.py  test_tempdir.py  test_vector_store.py
(+186 files in other folders)
